@@ -44,7 +44,7 @@ void *Zonstat(void *argument)
   int operfunc;
   int streamID1, streamID2;
   int vlistID1, vlistID2;
-  int gridID1, gridID2;
+  int gridID1, gridID2 = -1;
   int nlatmax;
   int index, ngrids;
   int recID, nrecs;
@@ -105,12 +105,17 @@ void *Zonstat(void *argument)
   index = 0;
   gridID1 = vlistGrid(vlistID1, index);
 
-  if ( gridInqType(gridID1) != GRID_LONLAT &&
-       gridInqType(gridID1) != GRID_GAUSSIAN &&
-       !(gridInqType(gridID1) == GRID_GENERIC && gridInqYsize(gridID1) > 1) )
-    cdoAbort("Unsupported gridtype: %s", gridNamePtr(gridInqType(gridID1)));
+  if ( gridInqType(gridID1) == GRID_LONLAT   ||
+       gridInqType(gridID1) == GRID_GAUSSIAN ||
+       gridInqType(gridID1) == GRID_GENERIC )
+    {
+      gridID2 = gridToZonal(gridID1);
+    }
+  else
+    {
+      cdoAbort("Unsupported gridtype: %s", gridNamePtr(gridInqType(gridID1)));
+    }
 
-  gridID2 = gridToZonal(gridID1);
   for ( index = 0; index < ngrids; index++ )
     vlistChangeGridIndex(vlistID2, index, gridID2);
 
